# ChangeLog for app-dicts/ipadic
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/ipadic/ChangeLog,v 1.5 2004/06/24 21:41:14 agriffis Exp $

*ipadic-2.6.3 (25 Apr 2004)

  25 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ipadic-2.6.0.ebuild,
  ipadic-2.6.1.ebuild, ipadic-2.6.3.ebuild, ipadic-2.7.0.ebuild:
  Stable version bumped. Don't assign default to S. Removed old ebuild.

*ipadic-2.7.0 (18 Apr 2004)

  18 Apr 2004; <matsuu@gentoo.org> +ipadic-2.7.0.ebuild:
  Version bumped.
  Added ~ppc and ~sparc to KEYWORDS.

*ipadic-2.6.1 (03 Aug 2003)

  03 Aug 2003; MATSUU Takuto <matsuu@gentoo.org> ipadic-2.6.1.ebuild:
  version bump.

*ipadic-2.6.0 (21 Jun 2003)

  21 Jun 2003; YAMAKURA Makoto <yakina@gentoo.org> ipadic-2.6.0.ebuild,
  ChangeLog,Manifest,files/digest-ipadic-2.6.0:

  Initial import. Ebuild submitted by MATSUU Takuto <matsuu@7501.net>
