@@ -1,7 +1,7 @@
-MD5 86b6bfea2b28fdc865d3d5eb9bf80cfa ipadic-2.6.1.ebuild 721
-MD5 2b6324da52183d434ddb6f58085178db ipadic-2.6.3.ebuild 726
-MD5 afe60c7855b302bce42c90c47297be03 ChangeLog 923
-MD5 73b6a71c5615f1d4797f16f166b0b6a8 ipadic-2.7.0.ebuild 763
+MD5 131bb711359d009797f175fea396dde2 ChangeLog 1096
+MD5 9fc48e5ce9ffa41cf1861593c9116033 ipadic-2.6.1.ebuild 723
+MD5 d6cbf6bbc634b6dbbe4ec86e06b9ab35 ipadic-2.6.3.ebuild 724
+MD5 37e7ea53087f8659af6a33aefc151424 ipadic-2.7.0.ebuild 762
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
 MD5 4afb27bed8feaa85ed28a3a53f0c26de files/digest-ipadic-2.6.1 65
 MD5 ff582187123f3456875348cda153c069 files/digest-ipadic-2.6.3 65
