@@ -1,14 +1,16 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/ipadic/ipadic-2.6.1.ebuild,v 1.6 2004/06/24 21:41:14 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/ipadic/ipadic-2.6.1.ebuild,v 1.7 2004/07/22 15:14:35 hattya Exp $
+
+IUSE=""
 
 DESCRIPTION="Japanese dictionary for ChaSen"
 HOMEPAGE="http://chasen.aist-nara.ac.jp/chasen/distribution.html.en"
 SRC_URI="http://chasen.aist-nara.ac.jp/stable/ipadic/${P}.tar.gz"
-LICENSE="as-is"
+
+LICENSE="ipadic"
 KEYWORDS="x86 amd64"
 SLOT="0"
-IUSE=""
 
 DEPEND=">=app-text/chasen-2.3.2"
 
@@ -20,6 +22,7 @@ src_compile() {
 
 src_install () {
 	make DESTDIR=${D} install || die
+
 	insinto /etc
 	doins chasenrc
 	dodoc INSTALL* README NEWS || die
