@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/ipadic/ipadic-2.7.0.ebuild,v 1.3 2004/06/24 21:41:14 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/ipadic/ipadic-2.7.0.ebuild,v 1.4 2004/07/22 15:14:35 hattya Exp $
 
 IUSE=""
 
@@ -8,7 +8,7 @@ DESCRIPTION="Japanese dictionary for ChaSen"
 HOMEPAGE="http://chasen.aist-nara.ac.jp/chasen/distribution.html.en"
 SRC_URI="http://chasen.aist-nara.ac.jp/stable/ipadic/${P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="ipadic"
 KEYWORDS="~x86 ~amd64 ~ppc ~sparc"
 SLOT="0"
 
